Remove Buck build toolchain
Change-Id: Id30c9eee59fc8c848bb53273d6ba3c31970ba94d